--- a/adobe_xd/pubspec.yaml
+++ b/adobe_xd/pubspec.yaml
@@ -1,5 +1,5 @@
 name: adobe_xd
-description: Helper widgets for the Adobe XD Flutter plugin.
+description: Generate code for building apps with Flutter based on your designs in Adobe XD with the “XD to Flutter” plugin. This package contains helper widgets used by the plugin.
 repository: https://github.com/AdobeXD/xd-to-flutter-plugin
 homepage: https://github.com/AdobeXD/xd-to-flutter-plugin
 
