--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,55 @@
 {
-    "id": "6eaf77ea",
-    "name": "XD to Flutter",
+	"id": "6eaf77ea",
+	"name": "XD to Flutter",
 	"version": "0.1.1",
 	"icons": [
-        { "width": 24, "height": 24, "path": "images/icon@1x.png" },
-        { "width": 48, "height": 48, "path": "images/icon@2x.png" }
-    ],
-    "host": {
-        "app": "XD",
-        "minVersion": "28.0"
+		{
+			"width": 24,
+			"height": 24,
+			"path": "images/icon@1x.png"
+		},
+		{
+			"width": 48,
+			"height": 48,
+			"path": "images/icon@2x.png"
+		}
+	],
+	"host": {
+		"app": "XD",
+		"minVersion": "28.0"
 	},
-	
-    "uiEntryPoints": [
-        {
-            "type": "panel",
-            "label": "UI Panel",
-            "panelId": "flutterPanel"
-        },
-        {
-            "type": "menu",
-            "label": "Export All Widgets",
+	"uiEntryPoints": [
+		{
+			"type": "panel",
+			"label": "UI Panel",
+			"panelId": "flutterPanel"
+		},
+		{
+			"type": "menu",
+			"label": "Export All Widgets",
 			"commandId": "exportAll",
 			"shortcut": {
 				"mac": "Cmd+Shift+F",
 				"win": "Ctrl+Shift+F"
 			}
-        }
-    ]
+		},
+		{
+			"type": "menu",
+			"label": "Export Selected Widget",
+			"commandId": "exportSelected",
+			"shortcut": {
+				"mac": "Cmd+Shift+Alt+F",
+				"win": "Ctrl+Shift+Alt+F"
+			}
+		},
+		{
+			"type": "menu",
+			"label": "Copy Selected",
+			"commandId": "copySelected",
+			"shortcut": {
+				"mac": "Cmd+Alt+C",
+				"win": "Ctrl+Alt+C"
+			}
+		}
+	]
 }
