Change Export Selected key shortcut
Windows 10 has a recent known issue with ctrl-alt-shift-f

--- a/manifest.json
+++ b/manifest.json
@@ -38,8 +38,8 @@
 			"label": "Export Selected Widget",
 			"commandId": "exportSelected",
 			"shortcut": {
-				"mac": "Cmd+Shift+Alt+F",
-				"win": "Ctrl+Shift+Alt+F"
+				"mac": "Cmd+Shift+D",
+				"win": "Ctrl+Shift+D"
 			}
 		},
 		{
