--- a/adobe_xd/pubspec.yaml
+++ b/adobe_xd/pubspec.yaml
@@ -1,9 +1,9 @@
 name: adobe_xd
 description: Generate code for building apps with Flutter based on your designs in Adobe XD with the “XD to Flutter” plugin. This package contains helper widgets used by the plugin.
-repository: https://github.com/AdobeXD/xd-to-flutter-plugin
-homepage: https://github.com/AdobeXD/xd-to-flutter-plugin
+repository: https://github.com/AdobeXD/xd-to-flutter-plugin/tree/master/adobe_xd
+homepage: https://xd.adobelanding.com/xd-to-flutter/
 
-version: 0.1.3
+version: 0.1.4
 
 environment:
   sdk: '>=2.1.0 <3.0.0'
