Add commented line in example pubspec
Can be uncommented when using dev/master channels to avoid null safety related errors.

--- a/adobe_xd/example/pubspec.yaml
+++ b/adobe_xd/example/pubspec.yaml
@@ -22,6 +22,10 @@ environment:
 
 # In production, use the adobe_xd package from https://pub.dev/packages/adobe_xd
 dependencies:
+  # TODO: remove this when it becomes unnecessary.
+  # Temporary. Uncomment / update this line to fix errors with null-safety errors
+  # when using the dev or master channels:
+  # flutter_svg: 0.20.0-nullsafety.3
   adobe_xd:
     path: ../
   flutter:
