--- a/adobe_xd/pubspec.yaml
+++ b/adobe_xd/pubspec.yaml
@@ -1,9 +1,9 @@
 name: adobe_xd
 description: Generate code for building apps with Flutter based on your designs in Adobe XD with the “XD to Flutter” plugin. This package contains helper widgets used by the plugin.
 repository: https://github.com/AdobeXD/xd-to-flutter-plugin/tree/master/adobe_xd
-homepage: https://xd.adobelanding.com/xd-to-flutter/
+homepage: https://adobe.com/go/xd_plugins_discover_plugin?pluginId=6eaf77ea
 
-version: 1.1.0
+version: 1.1.0+1
 
 environment:
   sdk: '>=2.1.0 <3.0.0'
