Remove menu items.
Adobe plugin review is requiring some kind of result indication when the panel is closed, but there is currently no way to detect this condition or to open the panel. Hopefully can add this back in later.

--- a/manifest.json
+++ b/manifest.json
@@ -21,35 +21,8 @@
 	"uiEntryPoints": [
 		{
 			"type": "panel",
-			"label": "UI Panel",
+			"label": "XD to Flutter",
 			"panelId": "flutterPanel"
-		},
-		{
-			"type": "menu",
-			"label": "Export All Widgets",
-			"commandId": "exportAll",
-			"shortcut": {
-				"mac": "Cmd+Shift+F",
-				"win": "Ctrl+Shift+F"
-			}
-		},
-		{
-			"type": "menu",
-			"label": "Export Selected Widget",
-			"commandId": "exportSelected",
-			"shortcut": {
-				"mac": "Cmd+Shift+Alt+1",
-				"win": "Ctrl+Shift+Alt+1"
-			}
-		},
-		{
-			"type": "menu",
-			"label": "Copy Selected",
-			"commandId": "copySelected",
-			"shortcut": {
-				"mac": "Cmd+Alt+C",
-				"win": "Ctrl+Alt+C"
-			}
 		}
 	]
 }
