--- a/adobe_xd/pubspec.yaml
+++ b/adobe_xd/pubspec.yaml
@@ -6,13 +6,13 @@ homepage: https://adobe.com/go/xd_plugins_discover_plugin?pluginId=6eaf77ea
 version: 1.1.0+1
 
 environment:
-  sdk: '>=2.1.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ^1.6.7
 
 dependencies:
   flutter:
     sdk: 'flutter'
-  flutter_svg: '>=0.17.0 <0.21.0'
+  flutter_svg: ^0.21.0+1
 
 dev_dependencies:
   flutter_test:
