--- a/adobe_xd/pubspec.yaml
+++ b/adobe_xd/pubspec.yaml
@@ -3,16 +3,17 @@ description: Generate code for building apps with Flutter based on your designs 
 repository: https://github.com/AdobeXD/xd-to-flutter-plugin/tree/master/adobe_xd
 homepage: https://adobe.com/go/xd_plugins_discover_plugin?pluginId=6eaf77ea
 
-version: 1.1.0+1
+version: 2.0.0
 
 environment:
-  sdk: '>=2.1.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ^1.6.7
 
 dependencies:
+  collection: ^1.15.0
   flutter:
     sdk: 'flutter'
-  flutter_svg: '>=0.17.0 <0.21.0'
+  flutter_svg: ^0.21.0+1
 
 dev_dependencies:
   flutter_test:
