--- a/adobe_xd/pubspec.yaml
+++ b/adobe_xd/pubspec.yaml
@@ -3,7 +3,7 @@ description: Generate code for building apps with Flutter based on your designs 
 repository: https://github.com/AdobeXD/xd-to-flutter-plugin/tree/master/adobe_xd
 homepage: https://adobe.com/go/xd_to_flutter
 
-version: 2.0.0+1
+version: 2.0.1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -13,7 +13,7 @@ dependencies:
   collection: ^1.15.0
   flutter:
     sdk: 'flutter'
-  flutter_svg: ^0.21.0+1
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
